Blogging can now only be done by the project owner. Fixed missing div tag closure that would stretch the create project area over the entire page, when a user is not logged in. Added support for user dropdown menu.

--- a/projectnexus/public/css/global.css
+++ b/projectnexus/public/css/global.css
@@ -150,7 +150,7 @@ body {
       transition: all 0.5s; }
     .content-wrap .header-nav-wrap .header-user {
 	float: right;
-	margin: 14px 0 0 5%;
+	margin: 0px 0 0 5%;
 	font-size: 20px;
 	color: #FFF;
 	}
