--- a/projectnexus/public/css/jonathan.css
+++ b/projectnexus/public/css/jonathan.css
@@ -322,3 +322,31 @@ div.objective_header
     height: 80px;
     padding: 10px;
 }
+
+#header_user_image
+{
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    margin-left: 60px;
+}
+
+#header_user_name
+{
+    font-size: 8pt;
+    margin-left: 60px;
+}
+
+#header_user_dropdown
+{
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    z-index: 10;
+    display: none;
+}
+
+.header-user
+{
+    width: 100px;
+}
